@@ -1,8 +1,8 @@
 Package: RcppCNPy
 Type: Package
 Title: Read-Write Support for NumPy Files via Rcpp
-Version: 0.2.3.3
-Date: 2015-01-01
+Version: 0.2.3.4
+Date: 2015-01-02
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The cnpy library written by Carl Rogers provides read and write
